@@ -1,17 +1,18 @@
 v1.1
-	last.fm support
-	use plchanges to keep track of the playlist (faster?)
-	ability to 'save all' for tag editing? shortcut or button?
+	use plchanges (pl id?) to keep track of the playlist (faster?)
 	speed up sorting by manipulating self.songs, self.currentdata appropriately?
-	_integrate_ xmms-like search based on nex's patch
 	VA albums
+	--keys to list all keybindings
+
+v1.2
+	switching between user profiles?
 	
 Future:
 	lyrics -> allow user to edit, fetch, auto-update to wiki, search terms..?
 	make selection, dnd, more like thunar
 	connect in background via socket.setblocking(0)
 	libnotify?
-	switching between user profiles?
 	test multiple streams at once..
 	local amazon sites (i.e. amazon.de)?
 	rename playlist (only possible in mpd svn?)
+	crop songs in current playlist?
